--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,5 @@
 inputs:   # List of input values for the particular workflow nodes.
-  amass-1.domain: trickest.io
-  subfinder-1.domain: trickest.io
+  string-input-1 : trickest.io
 machines: # Machines configuration by type related to execution parallelisam.
   small:  2
   large: 2	
