--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
 inputs:   # List of input values for the particular workflow nodes.
-  amass-1.domain: example.com # <node_id>.<parameter_name>: <parameter_value>
+  amass-1.domain: trickest.io
+  subfinder-1.domain: trickest.io
 machines: # Machines configuration by type related to execution parallelisam.
-  large:  1
+  small:  2
+  large: 2	
 outputs:  # List of nodes whose outputs will be downloaded.
   - zip-to-out
