--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 inputs:   # List of input values for the particular workflow nodes.
-  string-input-1: trickest.io
   amass-1.domain: trickest.io
   subfinder-1.domain: trickest.io
 machines: # Machines configuration by type related to execution parallelisam.
-  small:  1	
+  small:  2
+  large: 2	
 outputs:  # List of nodes whose outputs will be downloaded.
   - zip-to-out
