--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ inputs:   # List of input values for the particular workflow nodes.
   amass-1.domain: trickest.io
   subfinder-1.domain: trickest.io
 machines: # Machines configuration by type related to execution parallelisam.
-  small:  2
+  small: 1
+  large: 1
 outputs:  # List of nodes whose outputs will be downloaded.
   - zip-to-out
